--- a/momentum.css
+++ b/momentum.css
@@ -9,7 +9,7 @@
     left:0;
     top:0;
 	max-width:100%;
-    max-height: 1175px;
+    min-height: 1100px;
     z-index:-5;
     filter: brightness(30%);
 }
@@ -155,17 +155,30 @@
         cursor: pointer;
     }
 
-#greeting{
+.logining{
     font-family: 'Roboto';
+    display: flex;
     position: absolute;
-    top: 40%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%,-50%);
     z-index: 2;
     text-align: center;
-    font-size: 30px;
     color: #fff;
-    opacity: 60%;
+    opacity: 60%; 
+}
+#logout-btn {
+    padding: 10px;
+    border-radius: 20px;
+    height: 50px;
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+#logout-btn:hover {
+    cursor: pointer;
+    opacity: 100%;
+
 }
 
 .clock-font{
@@ -211,4 +224,7 @@
     color: whitesmoke;
     opacity: 60%;
 }
-
+.clearLine {
+    text-decoration: line-through;
+    color: red;
+}
